--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,8 @@ services:
             - ${CONFIG}/web:/config:Z
             - ${CONFIG}/web/letsencrypt:/etc/letsencrypt:Z
             - ${CONFIG}/transcripts:/usr/share/jitsi-meet/transcripts:Z
+            - ./jitsi-meet/images/:/usr/share/jitsi-meet/images/
+            - ./jitsi-meet/css/all.css:/usr/share/jitsi-meet/css/all.css
         environment:
             - ENABLE_AUTH
             - ENABLE_GUESTS
